Removed permgen argument in all launchers.